--- a/apps/astro/src/components/Card.astro
+++ b/apps/astro/src/components/Card.astro
@@ -11,7 +11,7 @@ const { href, title, location, company } = Astro.props;
 
 <li class="link-card">
   <a href={href}>
-    <h2>
+    <h2 class="font-bold text-purple-500">
       {title}
       <span>&rarr;</span>
     </h2>
